PA2/samples/wrong_syntax_2.out

*** Error line 1.
booolean foo() {
^^^^^^^^
*** syntax error

