PA2/samples/wrong_syntax_2.java
booolean foo() {
    boolean b = true;
    return b;
}